--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,6 @@ tag_archive:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-7X80MLGVWX" # Replace this with your ID, or delete
+    tracking_id          : "G-TWH6XGXW0H" # Replace this with your ID, or delete
     anonymize_ip         : false
 
