--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,8 @@ tag_archive:
   type: liquid
   path: /tags/
   
-analytics:
-  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
-  google:
-    tracking_id          : "G-TWH6XGXW0H" # Replace this with your ID, or delete
-    anonymize_ip         : false
-
+# analytics:
+#   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
+#   google:
+#     tracking_id          : "G-TWH6XGXW0H" # Replace this with your ID, or delete
+#     anonymize_ip         : false
