--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name             : "Neco Kriel"
   avatar           : "/assets/images/avatar.jpg"
-  bio              : "Theoretical & Computational Astrophysics -- PhD Candidate at The Australian National University"
+  bio              : "2nd year PhD Student at The Australian National University"
   location         : "Mount Stromlo Observatory, Canberra, Australia"
   email            : 
   links:
