--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Neco Kriel
 masthead_title: "Neco Kriel"
-logo: "/assets/images/masthead_logo.png"
+logo: "/assets/masthead_logo.png"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website
@@ -58,7 +58,7 @@ plugins:
 # Site Author
 author:
   name             : "Neco Kriel"
-  avatar           : "/assets/images/avatar.jpg"
+  avatar           : "/assets/avatar.jpg"
   bio              : "2nd year PhD Student at The Australian National University"
   location         : "ANU, Canberra, Australia"
   email            : 
