--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Neco Kriel
 masthead_title: "Neco Kriel"
-logo: "/assets/masthead_logo.png"
+logo: "/assets/cube_small.gif"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website
