--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Neco Kriel
 masthead_title: "Neco Kriel"
-logo: "/assets/cube_small.gif"
+logo: "/assets/mach10cube_small.gif"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website
@@ -33,18 +33,6 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
 
 # Plugins (previously gems:)
 plugins:
@@ -72,9 +60,9 @@ author:
     - label: "AstroKriel"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/astrokriel"
-#    - label: "Google Scholar"
-#      icon: "fab fa-fw fa-google-scholar"
-#      url: "https://scholar.google.com/citations?hl=en&user=cUAUnsIAAAAJ"
+    - label: "Google Scholar"
+      icon: "fab fa-fw fa-google-scholar"
+      url: ""
 
 footer:
   links:
@@ -113,4 +101,4 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-  
+
