update reference to uni

--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ plugins:
 author:
   name             : "Neco Kriel"
   avatar           : "/assets/avatar.jpg"
-  bio              : "2nd year PhD Student at The Australian National University"
-  location         : "ANU, Canberra, Australia"
+  bio              : "2nd year PhD Student"
+  location         : "RSAA at ANU, Canberra, Australia"
   email            : 
   links:
     - label: "neco.kriel@anu.edu.au"
