--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   name             : "Neco Kriel"
   avatar           : "/assets/avatar.jpg"
   bio              : "2nd year PhD Student"
-  location         : "RSAA at ANU, Canberra, Australia"
+  location         : "ANU, Canberra, Australia"
   email            : 
   links:
     - label: "neco.kriel@anu.edu.au"
