--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ plugins:
 # Site Author
 author:
   name             : "Neco Kriel"
-  avatar           : "/assets/avatar.jpg"
+  avatar           : "/assets/neco.jpg"
   bio              : "2nd year PhD Student"
   location         : "ANU, Canberra, Australia"
   email            : 
