--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 main:
   - title: "Home"
     url: /
-  # - title: "Research"
-  #   url: /research/
-  # - title: "Publications"
-  #   url: /papers/
-  # - title: "Side Projects"
-  #   url: /projects/
+  - title: "Research"
+    url: /research/
+  - title: "Publications"
+    url: /papers/
+  - title: "Side Projects"
+    url: /projects/
 
