revert back to working version: 3209325

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,5 @@ main:
   - title: "Research"
     url: /research/
   - title: "Publications"
-    url: /papers/
-  - title: "Side Projects"
-    url: /projects/
+    url: /pubs/
 
