--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
   links:
     - label: "neco.kriel@anu.edu.au"
       icon: "fas fa-regular fa-envelope"
-      url: "mailto:neco.kriel(at)anu.edu.au"
+      url: "mailto:neco.kriel@anu.edu.au"
     - label: "0000-0002-3558-3926"
       icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0002-3558-3926"
@@ -65,7 +65,7 @@ footer:
   links:
     - label: "Email"
       icon: "fas fa-regular fa-envelope"
-      url: "mailto:neco.kriel(at)anu.edu.au"
+      url: "mailto:neco.kriel@anu.edu.au"
     - label: "OrcID"
       icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0002-3558-3926"
